--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "webpack",
     "eject": "react-scripts eject"
   },
   "author": "Deependra Singh",
@@ -20,6 +20,15 @@
     "slate": "^0.58.4",
     "slate-prop-types": "^0.5.44",
     "slate-react": "^0.58.4"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.11.6",
+    "@babel/preset-env": "^7.11.5",
+    "@babel/preset-react": "^7.10.4",
+    "babel-loader": "^8.1.0",
+    "html-loader": "^1.3.0",
+    "html-webpack-plugin": "^4.4.1",
+    "webpack-cli": "^3.3.12"
   },
   "browserslist": {
     "production": [
